<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".auth.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:id="@+id/layoutLoginForm"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailEditTextL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="?attr/textColor"
            android:textColorHint = "?attr/textColor"
            android:backgroundTint="?attr/textColor"

            android:paddingLeft="16dp"
            app:met_floatingLabel="normal"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passwordEditTextL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="?attr/textColor"
            android:textColorHint = "?attr/textColor"
            android:backgroundTint="?attr/textColor"

            android:layout_marginTop="8dp"
            android:paddingLeft="16dp"
            app:met_floatingLabel="normal"/>

        <Button
            android:id="@+id/loginButtonL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/login"
            android:textColor="?attr/textColor"
            android:textStyle="bold"
            android:textAllCaps="false"

            android:background="?attr/buttonColor"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:id="@+id/layoutLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/doNotHaveAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/noAccount"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                android:textStyle="bold"

                android:layout_margin="16dp" />

            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="16dp"
                android:text="@string/forgotPassword"
                android:textColor="?attr/textColor"

                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>