<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".courses.CreateNewPartActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:id="@+id/layoutPart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/courseImageViewC"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:background="@mipmap/ic_book_foreground" />

        <EditText
            android:id="@+id/titleEditTextP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="?attr/textColor"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"

            android:textColor="?attr/textColor"
            android:textColorHint="?attr/textColor" />

        <EditText
            android:id="@+id/imagePartUrlEditTextP"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:backgroundTint="?attr/textColor"
            android:ems="10"
            android:hint="@string/imageURL"
            android:paddingLeft="16dp"

            android:textColor="?attr/textColor"
            android:textColorHint="?attr/textColor" />

        <EditText
            android:id="@+id/textEditTextP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/textColor"

            android:ems="10"
            android:hint="@string/infoText"
            android:maxHeight="200dp"
            android:paddingLeft="16dp"

            android:textColor="?attr/textColor"
            android:textColorHint="?attr/textColor" />

    </LinearLayout>

    <Button
        android:id="@+id/createPartButtonP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/goToCreatingTests"
        android:textColor="?attr/textColor"
        android:textAllCaps="false"
        android:textStyle="bold"

        android:layout_margin="30dp"
        android:background="?attr/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPart" />

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/cancel"
        android:textColor="?attr/hintColor"
        android:textSize="18sp"
        android:textStyle="bold"

        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPartButtonP" />

</androidx.constraintlayout.widget.ConstraintLayout>

