<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    tools:context="com.example.awesomeproject.courses.FinishTestActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <TextView
        android:id="@+id/titleToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"

        tools:text="Результат"
        tools:textColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/imageWinner"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:src="@mipmap/ic_cup_foreground"
        android:visibility="invisible"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <ImageView
        android:id="@+id/imageLoser"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:src="@mipmap/ic_fail_foreground"
        android:visibility="invisible"

        tools:visibility="visible"
        tools:src="@color/colorAccent"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/yourResult"
        android:textSize="24sp"
        android:textColor="?attr/textColor"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageWinner" />

    <LinearLayout
        android:id="@+id/linearLayoutScoreResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/scoreBar"
            android:layout_width="50dp"
            android:layout_height="40dp"

            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/slash"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:text="@string/outOf"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/questionNum"
            android:layout_width="50dp"
            android:layout_height="40dp"

            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/computerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/opponentResult"
        android:textColor="?attr/textColor"
        android:textSize="20sp"

        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutScoreResult" />

    <TextView
        android:id="@+id/scoreComputerText"
        android:layout_width="50dp"
        android:layout_height="40dp"

        android:gravity="center"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="?attr/textColor"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computerTextView"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/goBackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/goBackToTheme"
        android:textColor="?attr/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreComputerText"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>
